2020-06-22  Peter Stephenson  <p.stephenson@samsung.com>

	* 46079: Src/math.c, Test/C01arith.ztst: Ignore double quotes in
	math expression: treat as white space.

2020-06-22  Manuel Jacob  <me@manueljacob.de>

	* 46091: Doc/Zsh/contrib.yo,
	Functions/VCS_Info/Backends/VCS_INFO_get_data_hg: Add code to
	Mercurial VCS backend to show topic if there is any.

2020-06-19  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 46044 (tweaked per Matthew): Completion/Unix/Command/_units:
	Correct the path to the units data file on Debian with units
	2.00 and newer and on FreeBSD.

2020-06-18  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 46067: Test/A05execution.ztst: Add a unit test for
	workers/46060.

2020-06-18  Peter Stephenson  <p.stephenson@samsung.com>

	* 46060: Src/jobs.c: Ensure process has been signalled before
	taking special action for SIGINT or SIGQUIT.

2020-06-17  Eric Cook  <llua@gmx.com>

	* 45982: Frederick Zhang: Completion/Unix/Command/_zfs:
	Add space read-only property

2020-06-17  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Util/ztst-syntax.vim: internal: ztst.vim: Recognize
	empty "F:" line as well, as the test harness does.

2020-06-17  Miroslav Koškár  <mk@mkoskar.com>

	* 46049: Doc/Zsh/options.yo: docs: Correct the sense of the
	single-letter abstract of the GLOBAL_RCS option (-d)

2020-06-11  Oliver Kiddle  <okiddle@yahoo.co.uk>

	* gitlab !12: Jan Máslo: Completion/Linux/Command/_mat,
	Completion/Linux/Command/_mat2: new completions

	* 46036: Completion/Zsh/Type/_ps1234: fix colouring in prompt
	completion

	* users/24892: Completion/Unix/Type/_files,
	Completion/Zsh/Command/_zstyle: fix local declaration with
	recursive-files style and complete it for zstyle

2020-06-10  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Doc/Zsh/mod_zutil.yo: zstyle docs: Fix typo.

2020-06-09  Peter Stephenson  <p.stephenson@samsung.com>

	* 46026: Doc/Zsh/options.yo, Src/exec.c, Src/options.c,