@@ -1,3 +1,8 @@
+2020-06-25  Daniel Shahaf  <d.s@daniel.shahaf.name>
+
+	* 46102: Test/ztst.zsh: test harness: Make the XPass message
+	distinct from the Fail message.
+
 2020-06-22  Peter Stephenson  <p.stephenson@samsung.com>
 
 	* 46079: Src/math.c, Test/C01arith.ztst: Ignore double quotes in
